# beggar

./: .codecov.yml  .gitignore  Cargo.toml  README.md  audit.toml  rustfmt.toml  sample_complete_multipart.json
.cargo/: audit.toml
.github/workflows/: rust-ci.yml  security-audit.yml
.sqlx/: query-30bf2d6b34b41e85479465e0aedb24be703c31e078d0c5756381395b25c2f683.json  query-40c688c59722fd6b48e3264209c76871c4a0081e6220e5ca4279c57b4bf4cc74.json  query-4d06f3a7173c1f696acd85560b57e7288b9fbf39666f7dd3159115a3782560dd.json  query-77acfe16e61d2ba0ae979623cbb57ae0c5330b5f8048beaaec9f8a719f36b992.json  query-78bee2c3d8b63a87a9190116d7555b6337f4f602e7404cb27712250912d32218.json  query-908e8f3651865fa9ea5748f4ba9da847b1e189d7228864ef6ec99888aa5f2e1b.json  query-973379b7d21953dae2f11f683e11b801433dbd2dcebf5c97ce0b3081ed695847.json  query-c7feb43f3f9fed23a96c6674899464295d56e669e6e729e11a7c5dbf48d3ebc5.json  query-cf5a162bb59c14e6c0e8974d778a05c575e817a7c7947a4942ffb0313f8481f8.json  query-dc139a39315d6fa0872cd2a3ea7a517d565b38e0fd7e3134df44ba5114822fd8.json  query-e322083b0cb3009681fcc17d076f319f23fad82b759909718b586938122c906b.json
config/: default.yaml
migrations/: 20250206143206_create_details_table.sql  20250208084913_create_multipart_upload_tables.sql
src/: checksum.rs  datastore.rs  error.rs  fs.rs  lib.rs  main.rs  multipart_upload.rs  multipart_upload_part.rs  s3.rs  s3_item_detail.rs  settings.rs  storage_backend.rs  storage_backend_old.rs  utils.rs
tests/: it_aws.rs
