[package]
name = "beggar"
version = "0.11.0-dev"
description = "An S3 server based on file system with metadata stored in Postgres"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server", "S3"]
edition = "2021"

[[bin]]
name = "beggar"
required-features = ["binary"]

[features]
default = ["binary"]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.83"
base64-simd = "0.8.0"
bytes = "1.7.2"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4.5.20", optional = true, features = ["derive"] }
crc32c = "0.6.8"
futures = "0.3.31"
hex-simd = "0.8.0"
hyper-util = { version = "0.1.9", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
    "service",
] }
md-5 = "0.10.6"
mime = "0.3.17"
std-next = "0.1.1"
numeric_cast = "0.2.1"
path-absolutize = "3.1.1"
s3s = { version = "0.10.1", features = ["tower"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", optional = true, features = [
    "env-filter",
    "time",
] }
transform-stream = "0.3.0"
uuid = { version = "1.10.0", features = ["v4"] }

tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["limit", "cors"] }
hyper = { version = "1.4.1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "bigdecimal",
    "postgres",
    "runtime-tokio",
    "chrono",
] }
config = { version = "0.15.7", features = ["yaml"] }
serde_yaml = "0.9.34"
serde = "1.0.217"

[dev-dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
aws-config = { version = "1.5.8", default-features = false }
aws-credential-types = { version = "1.2.1", features = ["test-util"] }
aws-sdk-s3 = { version = "1.56.0", features = ["behavior-version-latest"] }
mockall = "0.13.1"
once_cell = "1.20.2"
tempfile = "3.16.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
