[package]
name = "beggar"
version = "0.11.0-dev"
description = "An S3 server based on file system with metadata stored in Postgres"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server", "S3"]
edition = "2024"

[[bin]]
name = "beggar"
required-features = ["binary"]

[features]
default = ["binary"]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait = "0.1.88"
base64-simd = "0.8.0"
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
clap = { version = "4.5.36", optional = true, features = ["derive"] }
crc32c = "0.6.8"
futures = "0.3.31"
hex-simd = "0.8.0"
hyper-util = { version = "0.1.11", optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
    "service",
] }
md-5 = "0.10.6"
mime = "0.3.17"
std-next = "0.1.8"
numeric_cast = "0.3.0"
path-absolutize = "3.1.1"
s3s = { version = "0.11.0", features = ["tower"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", optional = true, features = [
    "env-filter",
    "time",
] }
transform-stream = "0.3.1"
uuid = { version = "1.16.0", features = ["v4"] }

tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["limit", "cors"] }
hyper = { version = "1.6.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "bigdecimal",
    "postgres",
    "runtime-tokio",
    "chrono",
] }
config = { version = "0.15.11", features = ["yaml"] }
serde_yaml = "0.9.34"
serde = "1.0.219"

[dev-dependencies]
postgresql_embedded = { version = "0.18.3", features = ["tokio", "zonky"] }
postgresql_archive = "0.18.3"
anyhow = { version = "1.0.97", features = ["backtrace"] }
aws-config = { version = "1.6.1", default-features = false }
aws-credential-types = { version = "1.2.2", features = ["test-util"] }
aws-sdk-s3 = { version = "1.82.0", features = ["behavior-version-latest"] }
mockall = "0.13.1"
once_cell = "1.21.3"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
postgres = { version = "0.19.10" }
